<resources>
    <string name="app_name">SavingData</string>
    <string name="enter_the_text">Enter the text : </string>
    <string name="myTextString">Text</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="Load">Load</string>
    <string name="Save">Save</string>
    <string name="internal_memory">Internal Memory</string>
    <string name="external_memory">External Memory</string>
</resources>
